# LiteRT-LM

./: .gitignore  Cargo.toml  README.md  WORKSPACE  cargo-bazel-lock.json  input_prompt.json  live_call.py  requirements.txt  system_requirements.md  test_file_input.py  test_gpu_audio.json  test_multimodal.py  test_vision.py
.github/workflows/: ci-build.yml
android/GemmaLiveCall/: settings.gradle.kts
c/: BUILD  engine.cc  engine.h  engine_test.cc
kotlin/: README.md
runtime/components/: BUILD  lora.cc  lora_manager.h  lora_manager_test.cc  lora_test.cc  model_resources.h  model_resources_test.cc  prompt_template.cc  prompt_template.h  prompt_template_test.cc  sampler.h  sampler_factory.cc  sampler_factory.h  stop_token_detector.cc  stop_token_detector.h  stop_token_detector_test.cc  top_p_cpu_sampler.cc  top_p_cpu_sampler.h  top_p_cpu_sampler_test.cc
runtime/conversation/: BUILD  conversation.cc  conversation.h  conversation_test.cc  internal_callbacks_adapter.cc  internal_callbacks_adapter.h  internal_callbacks_adapter_test.cc  internal_observable_adapter.cc  internal_observable_adapter.h  internal_observable_adapter_test.cc
runtime/core/: BUILD  engine_impl.cc  engine_impl_test.cc  engine_legacy_impl.cc  pipeline.cc  pipeline.h  pipeline_test.cc  session_advanced.cc  session_advanced.h  session_advanced_test.cc  session_basic.cc  session_basic.h  session_basic_test.cc  session_utils.cc  tasks.cc  tasks.h  tasks_test.cc
runtime/engine/: BUILD  engine.h  engine_settings.cc  engine_settings.h  engine_settings_test.cc  io_types.cc  io_types.h  (+8 more)
rust/: BUILD
(+129 files in other folders)
