# To update the Cargo.lock file, run:
# touch src/lib.rs
# CARGO_BAZEL_REPIN=1 bazel sync --only=crate_index
# rm src/lib.rs

[package]
name = "litert_lm_deps"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
googletest = "0.14"
paste = "1.0"
quote = "1.0"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
syn = "2.0"
